--- a/environment.yml
+++ b/environment.yml
@@ -11,10 +11,10 @@ dependencies:
     # - python>=3.9,<3.10 # use this for wsl2 since opengl is broken with python 3.10
     # pytorch3d does not support pytorch 1.13 yet
     # so we install 1.12.1 for now
-    - pytorch>=1.13
-    - pytorch-cuda>=11.6 # bugs on smaller versions
-    - torchvision
-    - torchaudio
+    - pytorch==2.1.0 
+    - pytorch-cuda==12.1 # bugs on smaller versions
+    - torchvision==0.16.0
+    - torchaudio==2.1.0
 
     - git
     - vim
