--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
     - defaults
 
 dependencies:
-    - python>=3.9
+    - python==3.10
     # - python==3.9
     # - python>=3.9,<3.10 # use this for wsl2 since opengl is broken with python 3.10
     # pytorch3d does not support pytorch 1.13 yet
